--- a/application/gradle.properties
+++ b/application/gradle.properties
@@ -1,4 +1,4 @@
-ktor_version=2.0.3
-logback_version=1.2.3
-kodein_version=7.12.0
+ktorVersion=2.0.3
+logbackVersion=1.2.11
+kodeinVersion=6.5.1
 kotlin.code.style=official
