--- a/application/src/main/resources/application.conf
+++ b/application/src/main/resources/application.conf
@@ -4,3 +4,19 @@ ktor{
     }
 }
 
+b2wClient{
+    url: "https://www.americanas.com.br"
+    maxConnectionsCount: 10
+    maxConnectionsPerRoute: 10
+    keepAliveTime: 1000
+    connectTimeout: 200
+    readTimeout: 2000
+    connectRetryAttempts: 2
+    pipelineMaxSize: 10000
+    resilience: {
+        failureRateThreshold: 50
+        waitDurationInOpenStateInSeconds: 10
+        minimumNumberOfCalls: 10
+    }
+}
+
